# go-mbgeom

./: CMakeLists.txt  README.md  box.go  cgo_symbolizer.go  doc.go  feature.go  geom.go  geom_c_api_impl.hh  go.mod  go.sum  wagyu.go  wagyu_c_api.cc  wagyu_c_api.cpp  wagyu_c_api.h  wagyu_test.go
algorithms/: algorithms.go  algorithms_c_api.cc  algorithms_c_api.h
boost/geometry/geometries/register/: linestring.hpp  multi_linestring.hpp  multi_point.hpp  multi_polygon.hpp  ring.hpp  segment.hpp
boost/range/algorithm/: random_shuffle.hpp
data/: linestring.json
geojson/: algorithms.go  algorithms_c_api.cc  algorithms_c_api.h  box.go  feature.go  geojson.go  geojson_c_api.cc  geojson_c_api.h  geojson_test.go  geom.go
geojsonvt/: feature.go  geojsonvt.go  geojsonvt_c_api.cc  geojsonvt_c_api.h  geojsonvt_test.go  geom.go  tile.go  util.cc  util.hh
mapbox/: geojson_impl.hpp  geojsonvt_impl.hpp
mapbox/geojsonvt/: tile.hpp
mapbox/geometry/: snap_rounding.hpp
mapbox/geometry/algorithms/predicates/: base_impl.hpp  disjoint_impl.hpp  intersects_impl.hpp
test/: geojsonvt_test.cc  util.cc  util.hh
vector_tile/: mvt.go
vtile/: builder.go  composite.cc  composite.go  composite.hh  draw_geometry.cc  draw_geometry.hh  feature.go  feature_builder.go  feature_builder.hh  geometry.go  index.go  layer.go  mvt.go  mvt_test.go  projection.cc  property.go  tile.go  types.go  vtile_c_api.cc  vtile_c_api.h  zxy_math.hh
wagyu/: wagyu.go  wagyu_c_api.cc  wagyu_c_api.h  wagyu_test.go
